--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ and an associated PI of RUB's <a href="https://casa.rub.de/en/">CASA Excellence 
 Between October 2013 and April 2020 I was a 
 tenured researcher (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">chargé de recherche</a>)<br/>
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
-in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a><!-- (now officially on leave; fr: "mise en disponibilité") -->.
+in the <a href="https://team.inria.fr/prosecco/">Prosecco team</a><!-- (now officially on leave; fr: "mise en disponibilité") -->.
 Between May 2011 and
 September 2013 I was a Postdoctoral Research Associate at
 the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
