--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br>
-    in Bochum, Germany as a Tenured Faculty (W2).
+    in Bochum, Germany as a Tenured Faculty (W2 with tenure).
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a></b>
