--- a/index.html
+++ b/index.html
@@ -129,13 +129,12 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since February 2021)
-  <!-- <ul> -->
-  <!-- <li>Abstract deadline: 16 September 2021</li> -->
-  <!-- <li>Submission deadline: 22 September 2021</li> -->
-  <!-- <li>Conference: 17-18 January 2022, Philadelphia, Pennsylvania, USA</li> -->
-  <!-- <li>Conference: 17-19 January 2021, Online</li> -->
-  <!-- </ul> -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
+  <ul>
+  <li>Abstract deadline: 14 September 2022</li>
+  <li>Submission deadline: 21 September 2022</li>
+  <li>Conference: 16-17 January 2023, Boston, Massachusetts, USA</li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Co-Organizer)
