--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/prisc-2022">Workshop on Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
+  <ul>
+  <!-- <li>Abstract deadline: 14 September 2022</li> -->
+  <!-- <li>Submission deadline: 21 September 2022</li> -->
+  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA</li>
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Co-Organizer)
   <!-- <ul> --> 
   <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
