--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/prisc-2022">Workshop on Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/prisc-2022"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
