--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ could contribute:
   <ul>
   <li>Abstract deadline: 14 September 2022</li>
   <li>Submission deadline: 21 September 2022</li>
-  <li>Conference: 16-17 January 2023, Boston, Massachusetts, USA</li>
+  <li>Conference: 16-17 January 2023, Boston, Massachusetts, USA (with POPL)</li>
   </ul>
   </li>
 
@@ -141,7 +141,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
-  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA</li>
+  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA (with POPL)</li>
   </ul>
   </li>
 
