--- a/index.html
+++ b/index.html
@@ -564,6 +564,19 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
+    Théo Winterhalter,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Exequiel Rivas.
+    <b><a href="https://theowinterhalter.github.io/res/iodiv-hope.pdf">Verifying non-terminating programs with IO in F*</a></b>.
+    Extended abstract of presentation at the <a href="">10th ACM SIGPLAN Workshop on Higher-Order Programming with Effects (HOPE 2022)</a>.
+    September 2022.
+    <!-- <ul style="font-size: small"> -->
+    <!--   <li><a href="https://github.com/TheoWinterhalter/pdm4all">Coq development</a></li> -->
+    <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Théo Winterhalter,
     Cezar-Constantin Andrici,
     C&#259;t&#259;lin Hri&#539;cu,
