--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Exequiel Rivas.
     <b><a href="https://theowinterhalter.github.io/res/iodiv-hope.pdf">Verifying non-terminating programs with IO in F*</a></b>.
-    Presentation at the <a href="">10th ACM SIGPLAN Workshop on Higher-Order Programming with Effects (HOPE 2022)</a>.
+    Presentation at the <a href="https://icfp22.sigplan.org/home/hope-2022">10th ACM SIGPLAN Workshop on Higher-Order Programming with Effects (HOPE 2022)</a>.
     September 2022.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/hope-submission">F* development</a></li>
