--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@ could contribute:
     in Bochum, Germany as a Tenured Faculty (W2 with tenure).
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a></b>
-         for the best ETAPS 2020 paper in theoretical computer science for
-    <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li>
+  <!-- <li style="margin-bottom: 1ex;"><b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a></b> -->
+  <!--        for the best ETAPS 2020 paper in theoretical computer science for -->
+  <!--   <b><a href="https://arxiv.org/abs/1907.05320">Trace-Relating Compiler Correctness and Secure Compilation</a></b></li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
   <!-- <ul> -->
