--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> has obtained a tenured researcher (CR) position at Inria Saclay Île-De-France, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></li>
+
+
+
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
   <li>Abstract deadline: 14 September 2022</li>
