--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+<!-- TODO:
+     Guido at MSR;
+     Kenji at Inria?
+  -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> has obtained a tenured researcher (CR) position at Inria Saclay Île-De-France, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></li>
-
-
+  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a>, current member of the FOVSEC group, has obtained a tenured researcher (CR) position at Inria Saclay Île-De-France, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
