--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ could contribute:
      Kenji at Inria?
   -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a>, currently PostDoc in my group, has obtained a tenured researcher (CR) position at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <a href="https://kenji.maillard.blue/">Kenji Mailard</a>, graduated PhD student, has obtained a similar Inria position (ISFP), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
+  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a>, currently PostDoc in my group, has obtained a tenured researcher position (CR) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <a href="https://kenji.maillard.blue/">Kenji Mailard</a>, graduated PhD student, has obtained a similar Inria position (ISFP), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
