--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a>, currently PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <a href="https://kenji.maillard.blue/">Kenji Mailard</a>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a>, co-advised graduated PhD student, will be starting as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
+  <li style="margin-bottom: 1ex;"><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will be starting as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
 
-has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
+  <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martinez</a>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will be starting as a Research Engineer at <a href="">Microsoft Research in Redmond</a> in August 2022.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
