--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will be starting as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will be starting as a Research Engineer at <a href="">Microsoft Research in Redmond</a> in August 2022.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will be starting as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in August 2022.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
@@ -200,10 +200,10 @@ could contribute:
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;">
-    <b><a href="https://kenji.maillard.blue/">Kenji Maillard</a></b> has successfully defended his
-      <b><a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a></b> on 25 Nov 2019
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   <b><a href="https://kenji.maillard.blue/">Kenji Maillard</a></b> has successfully defended his -->
+  <!--     <b><a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a></b> on 25 Nov 2019 -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a></b> 
   <!-- <ul> -->
