--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ could contribute:
   <ul>
   <li>Abstract deadline: 14 September 2022</li>
   <li>Submission deadline: 21 September 2022</li>
-  <li>Conference: 16-17 January 2023, Boston, Massachusetts, USA (with POPL)</li>
+  <li>Conference: 16-17 January 2023, Boston, Massachusetts, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
@@ -152,7 +152,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
-  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA (with POPL)</li>
+  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
