--- a/index.html
+++ b/index.html
@@ -129,16 +129,11 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-<!-- TODO:
-     Guido at MSR;
-     Kenji at Inria?
-  -->
-
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in August 2022.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
@@ -541,8 +536,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-<!--   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, MPI-SP)</li> -->
-<!-- <\!-- http://perso.ens-lyon.fr/adrien.durier -\-> -->
+<!--   <li style="margin-bottom: 1ex;"><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a> (Postdoctoral Researcher, MPI-SP)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li>
 
