--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
       (January 2013)
 -->
   </li>
-  <li><a href="service.html">Community service</a></li>
+  <!-- <li><a href="service.html">Community service</a></li> -->
   <li><a href="https://github.com/catalin-hritcu">Github account</a></li>
   <!-- <li><a href="https://hritcu.wordpress.com">Old blog (Smiling)</a></li> -->
   <li>Pronouncing my name: /kətəlin hritsku/, <a href="sound/catalin_hritcu.mp3">mp3</a>, <a href="sound/catalin_hritcu.aiff">aiff</a></li>
