--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at MPI-SP (and before that Inria Paris), took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei.</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
   <li>Abstract deadline: 14 September 2022</li>
