--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at MPI-SP (and before that Inria Paris), took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at
+  MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
@@ -145,11 +146,10 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/prisc-2022"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/prisc-2023"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
   <ul>
-  <!-- <li>Abstract deadline: 14 September 2022</li> -->
-  <!-- <li>Submission deadline: 21 September 2022</li> -->
-  <li>Workshop: 23 January 2023, Boston, Massachusetts, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
+  <li>Submission deadline: 21 September 2022</li>
+  <li>Workshop: 21 January 2023, Boston, Massachusetts, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
