--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/prisc-2023"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
   <ul>
-  <li>Submission deadline: 21 September 2022</li>
+  <!-- <li>Submission deadline: ??? 2022</li> -->
   <li>Workshop: 21 January 2023, Boston, Massachusetts, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
