--- a/group.html
+++ b/group.html
@@ -133,9 +133,10 @@
       Semantic Foundations for F*</li>
   </ul>
   </li>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[Now PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>
   <ul>
     <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
       <a href="http://www.seas.upenn.edu/~aarthur/thesis.pdf">A Methodology for Micro-Policies</a></li>
@@ -143,7 +144,10 @@
       <a href="https://catalin-hritcu.github.io/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at <a href="https://www.cylab.cmu.edu/">Carnegie Mellon University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[Then PostDoc at <a href="https://www.cylab.cmu.edu/">Carnegie Mellon University</a> and <a href="http://www.bu.edu/cs/">Boston University</a>]<br/>
+[<b>Will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023</b>]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a></b> (Visiting Professor, Northeastern University)</li>
 
@@ -168,30 +172,37 @@
     <li style="margin-top: 1ex;">Visiting Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-05 to 2017-08:<br/>
     <a href="https://arxiv.org/abs/1802.00588">Software-fault isolation backend for secure compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]
+[Now at Renaissance School, Charlottesville and Blue Ridge Boost]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-07 to 2017-10:<br/>
     Interactive proving and effect masking in F*</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]
+[Now at Amazon AWS] [<b>Soon to join <a href="https://www.epfl.ch/schools/ic/">EPFL</a> as Assistant Professor</b>]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://tomer.libal.info/">Tomer Libal</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:
     Refactoring the F* type-checker</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>,
+Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a href="https://wwwfr.uni.lu/recherche/fstm/dcs">University of Luxembourg</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.williamjbowman.com/">William J. Bowman</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.williamjbowman.com">William J. Bowman</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-10 to 2017-12:<br/>
     From Coq to Dependently Typed Assembly</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.ccis.northeastern.edu/">Northeastern University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.ccis.northeastern.edu/">Northeastern University</a>]
+[<b>Now Assistant Professor at <a href="https://www.cs.ubc.ca/">University of British Columbia</a></b>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://yannis.computer/">Yannis Juglaret</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/yannis-juglaret-4102a9156/">Yannis Juglaret</a></b>
   <ul>
     <li style="margin-top: 1ex;">PhD Student funded by DGA/Inria grant, 2015-10 to 2016-09:<br/> Micro-Policies: High-Assurance Hardware-Assisted Security Monitors
     </li>
@@ -199,19 +210,29 @@
       <a href="http://arxiv.org/abs/1510.00697">Towards a Fully Abstract Compiler Using Micro-Policies -- Secure Compilation for Mutually Distrustful Components</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now Engineer at <a href="http://www.defense.gouv.fr/dga/la-dga2/expertise-et-essais/les-centres-d-expertise-et-d-essais-de-la-dga/dga-maitrise-de-l-information">DGA-MI</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
+[Then Engineer at <a href="http://www.defense.gouv.fr/dga/la-dga2/expertise-et-essais/les-centres-d-expertise-et-d-essais-de-la-dga/dga-maitrise-de-l-information">DGA-MI</a>]
+[Then R&amp;D Engineer at Quarkslab]<br/>
+[Now Senior Software Engineer at Mozilla]
+</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.lri.fr/membre.php?mb=2372">Diane Gallois-Wong</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/diane-gallois-wong-998175206/">Diane Gallois-Wong</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="https://catalin-hritcu.github.io/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>] [Now PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then Intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>]
+[Then PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]
+[Now Research Software Engineer at Nomadic Labs]
+</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://software.imdea.org/people/alejandro.aguirre">Alejandro Aguirre</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://software.imdea.org/~alejandro.aguirre/">Alejandro Aguirre</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="students/alejandro/report.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD Student at <a href="http://software.imdea.org/">IMDEA Software Institute</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
+[Then PhD Student at <a href="http://software.imdea.org/">IMDEA Software Institute</a>]<br/>
+[Now PostDoc at Aarhus University]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://poisson.chat/">Li-yao Xia</a></b>
   <ul>
@@ -219,15 +240,22 @@
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
-    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]</div></li>
+    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Then PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]<br/>
+[Now PostDoc at University of Edinburgh]
+</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.lix.polytechnique.fr/Labo/Simon.Forest/">Simon Forest</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.i2m.univ-amu.fr/perso/simon.forest/">Simon Forest</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>] [Now PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
+[Then MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
+[Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]<br/>
+[Now at PostDoc at Institut de Mathématiques de Marseille (I2M)]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>
   <ul>
@@ -235,22 +263,34 @@
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>]
+[Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
+[Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
+[Then PostDoc at <a href="http://www.ccs.neu.edu/">Northeastern University</a>]
+[Now at <a href="https://ethereum.foundation/">Ethereum Foundation</a>]
+</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://scholar.princeton.edu/nick">Nick Giannarakis</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/nickgiannarakis">Nick Giannarakis</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>]
+[Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> MSc student]
+[Then PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]<br/>
+[Then PostDoc at University of Wisconsin-Madison]
+[Now Applied Scientist at Amazon Web Services (AWS)]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a></b>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2011-04-04:<br/> <a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Mechanized Formalization of a Transformation from an Extensible Spi Calculus to Java</a></li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] [Now at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] <!-- [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] --> [Now at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.tarrach.eu/">Thorsten Tarrach</a></b>
   <ul>
