--- a/group.html
+++ b/group.html
@@ -49,13 +49,6 @@
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
-  <ul>
-    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
-      <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/>
@@ -63,8 +56,24 @@
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar-Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</b></li>
+
+</ul>
+
+
+<h2>Past Group Members</h2>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher)</li></b>
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
+      <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
+  </ul>
+  </li>
+
+<ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a></b>
   <ul>
@@ -75,49 +84,54 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.theolaurent.fr">Théo Laurent</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, since 2018-07:<br/>
-     <a href="https://www.fstar-lang.org">Engineering and research work on F*</a></li>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-07 to 2020-04:
+     <a href="https://www.fstar-lang.org">R&amp;D work on F*</a></li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
      <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://artagnon.com">Ramkumar Ramachandra</a> (Research Intern / Engineer<!--, starting in August 2019-->)</b></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://pleiad.cl/people/etanter">Éric Tanter</a></b>
+  <ul>  
+    <li style="margin-top: 1ex;">Visiting Professor on Sabbatical: 2018-07 to 2019-02 and 2019-08 to 2019-12</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [<b>Full Professor at <a href="https://pleiad.cl/">University of Chile</a></b>]
+  </div>
+  </li>
 
-</ul>
-
-
-<h2>Past Group Members</h2>
-
-<ul style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://pleiad.cl/people/etanter">Éric Tanter</a></b> (Visiting Professor, University of Chile)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://artagnon.com">Ramkumar Ramachandra</b></a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-08 to 2020-07:<br/>
+     Relational program verification</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+<!-- [Then Student Researcher at Université Denis Diderot]<br/>-->
+[Now MSc student at Université Paris Cité and research apprentice at <a href="https://www.irif.fr">IRIF</a>]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/kyoDralliam">Kenji Maillard</a></b>
   <ul>
-    <li style="margin-top: 1ex;"><b> Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
+    <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> from 2017-01 to 2019-11:<br/>
   <a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">Principles of Program Verification for Arbitrary Monadic Effects</a></li>
   </ul>
-  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar-Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</b></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[Then PostDoc at Inria in Nantes and University of Chile]<br/>
+[<b>Now on permanent <a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">Inria Starting Faculty Position</a> in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a>, Nantes</b>]
+  </div>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/floriangru">Florian Groult</a></b></li>
   <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-11 to 2019-10:<br/>
-    Towards Formally Secure Compartmentalization for C</li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-04 to 2018-10:<br/>
+    <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> from 2018-14 to 2019-10:<br/>
     Memory Sharing for a Compartmentalizing Compiler</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.univ-orleans.fr/en/sciences-techniques/info">Orléans University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a></b>
-  <ul>
-    <li style="margin-top: 1ex;">Research Intern from 2018-10 to 2019-01
-      <!-- Secure Compilation of Low* and C to WebAssembly. --></li>
-  </ul>
+  (Research Intern/Visitor from 2018-10 to 2019-01)
+  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div> -->
   </li>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a></b>
   <ul>
@@ -149,9 +163,16 @@
 [<b>Will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023</b>]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a></b> (Visiting Professor, Northeastern University)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Visiting Professor on Sabbatical: 2017-09 to 2018-07</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [<b>Now Full Professor &amp; Associate Dean for Graduate Programs at <a href="">Northeastern University</a></b>]
+  </div>
+  </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://aaronweiss.us/">Aaron Weiss</a></b> (Visiting Researcher, Northeastern University)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://aaronweiss.us/">Aaron Weiss</a></b> (Visiting Researcher from Northeastern University, 2017-09 to 2018-07)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.stronati.org/">Marco Stronati</a></b>
   <ul>
